@@ -18,12 +18,12 @@
  */
 package org.apache.bval.constraints;
 
-import junit.framework.Assert;
-import junit.framework.Test;
-import junit.framework.TestCase;
-import junit.framework.TestSuite;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 import java.math.BigDecimal;
+
+import org.junit.Test;
 
 /**
  * DigitsConstraintValidator Tester.
@@ -32,56 +32,47 @@ import java.math.BigDecimal;
  * @since <pre>02/03/2009</pre>
  * @version 1.0
  */
-public class DigitsValidatorTest extends TestCase {
-    public DigitsValidatorTest(String name) {
-        super(name);
-    }
-
+public class DigitsValidatorTest  {
+    @Test
     public void testValidateNumber() {
         DigitsValidatorForNumber validator = new DigitsValidatorForNumber();
         validator.setFractional(4);
         validator.setIntegral(2);
-        Assert.assertFalse(validator.isValid(new BigDecimal("100.1234"), null));
-        Assert.assertFalse(validator.isValid(new BigDecimal("99.12345"), null));
-        Assert.assertTrue(validator.isValid(new BigDecimal("99.1234"), null));
-        Assert.assertFalse(validator.isValid(Double.valueOf(100.1234), null));
-        Assert.assertFalse(validator.isValid(Double.valueOf(99.12345), null));
-        Assert.assertTrue(validator.isValid(Double.valueOf(99.1234), null));
-        Assert.assertTrue(validator.isValid(Double.valueOf(99.123400), null));
-        Assert.assertTrue(validator.isValid(new BigDecimal("99.123400"), null));
+        assertFalse(validator.isValid(new BigDecimal("100.1234"), null));
+        assertFalse(validator.isValid(new BigDecimal("99.12345"), null));
+        assertTrue(validator.isValid(new BigDecimal("99.1234"), null));
+        assertFalse(validator.isValid(Double.valueOf(100.1234), null));
+        assertFalse(validator.isValid(Double.valueOf(99.12345), null));
+        assertTrue(validator.isValid(Double.valueOf(99.1234), null));
+        assertTrue(validator.isValid(Double.valueOf(99.123400), null));
+        assertTrue(validator.isValid(new BigDecimal("99.123400"), null));
     }
 
+    @Test
     public void testValidateString() {
         DigitsValidatorForString validator = new DigitsValidatorForString();
         validator.setFractional(4);
         validator.setIntegral(2);
-        String val = "100.12345";
-        Assert.assertFalse(validator.isValid(val, null));
-        val = "99.1234";
-        Assert.assertTrue(validator.isValid(val, null));
+        assertFalse(validator.isValid("100.12345", null));
+        assertTrue(validator.isValid("99.1234", null));
     }
 
+    @Test
     public void testValidateNumber2() {
         DigitsValidatorForNumber validator = new DigitsValidatorForNumber();
         validator.setFractional(4);
         validator.setIntegral(2);
-        Long val = new Long("100");
-        Assert.assertFalse(validator.isValid(val, null));
-        val = new Long("99");
-        Assert.assertTrue(validator.isValid(val, null));
+        assertFalse(validator.isValid(Long.valueOf("100"), null));
+        assertTrue(validator.isValid(Long.valueOf("99"), null));
     }
 
+    @Test
     public void testValidateString2() {
         DigitsValidatorForString validator = new DigitsValidatorForString();
         validator.setFractional(0);
         validator.setIntegral(2);
-        String val = "99.5";
-        Assert.assertFalse(validator.isValid(val, null));
-        val = "99";
-        Assert.assertTrue(validator.isValid(val, null));
+        assertFalse(validator.isValid("99.5", null));
+        assertTrue(validator.isValid("99", null));
     }
 
-    public static Test suite() {
-        return new TestSuite(DigitsValidatorTest.class);
-    }
 }
